src/test/test-models/bad/print-void.stan
functions {
  void foo(int n) {
  }
}
transformed data {
  int z;
  z = 2;
  print(foo(z));
}
model { }
